...
          <Text className={`mr-2 text-center text-base font-semibold ${theme.textSecondary}`}>{t('walletOverview.totalBalance')}</Text>
          <Ionicons name={hideBalance ? 'eye-off' : 'eye'} size={16} color={iconColor} />
        </Pressable>
      </View>
      <View className="py-6">
        <Pressable onPress={toggleBalance}>
          <Text testID="home-total-balance" className={`mb-4 text-center text-3xl font-bold ${theme.textPrimary}`}>
            {hideBalance ? t('walletOverview.hiddenBalance') : formatBalance(balance, bitcoinUnit)}
          </Text>
        </Pressable>
        <View className="mb-4">
          <Text testID="home-total-balance-fiat" className={`text-center text-lg font-medium ${theme.textSecondary}`}>
            {hideBalance ? t('walletOverview.hiddenBalance') : `${convertedVal.toLocaleString('en-US', { maximumFractionDigits: 2 })} ${selectedFiatCurrency}`}
...
