...
}

const Footer = memo(({ onGetStarted, loading }: FooterProps) => {
  const { t } = useTranslation();
  return (
    <>
      <Button testID="onboarding-get-started" label={t('onboarding.getStarted')} onPress={onGetStarted} loading={loading} fullWidth variant="secondary" textClassName="text-base text-white" size="lg" />
      <Text testID="onboarding-agreement-text" className={`my-4 text-center ${theme.textSecondary}`}>
        {t('onboarding.agreementText')}{' '}
        <Text testID="onboarding-terms-text" className="font-semibold text-primary-600 underline dark:text-primary-400">
          {t('onboarding.termsOfService')}
        </Text>{' '}
        &{' '}
...
