...
      setRefreshing(false);
    }
  }, [retryBdkConnection, refreshWalletInfo]);

  return (
    <SafeAreaProvider>
      <SafeAreaView testID="home-screen" className="flex-1 bg-white dark:bg-charcoal-950">
        <FocusAwareStatusBar />
        <View className="flex-1">
          <View className="flex flex-row items-center justify-between border-b border-neutral-200 px-4 dark:border-charcoal-700">
            <View className="flex py-3">
              <Text className="text-2xl font-bold text-gray-800 dark:text-charcoal-100">{t('home.title')}</Text>
            </View>
...
